# large-language-model

./: .gitignore  README.md  config.yml.template  init.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
helper/: image.py
model/: README.md  phi_multimodal.py  template.py
scripts/: demo.py
src/llm/: __init__.py
src/llm/archive/: config.yml.template  main.py  requirements.txt  requirements2.txt
src/llm/helper/: image.py
src/llm/model/: embed.py  gpt_oss_20b.py  phi4_multimodal_instruct.py  phi_multimodal.py  phi_reasoning.py  selection.py  template.py
src/llm/models/: embed.py  gpt_oss_20b.py  gpt_oss_20b_dev.py  gpt_oss_20b_pipeline.py  phi4_multimodal_instruct.py  selection.py  template.py
src/llm/other/: conversations.py  convo_demo.py  demo.py
tests/: test_embed.py  test_gpt_oss_20b.py  test_list_models.py  test_phi4_multimodal_instruct.py
