[project]
name = "llm"  # The pip install <name>.
version = "0.1.0"
description = "Library for easy use of LLMs."
readme = "README.md"
authors = [
    { name = "Eric Apgar" }
]
urls = { "Homepage" = "https://github.com/EricApgar/large-language-model" }
requires-python = "~=3.12.0"

dependencies = [
    "transformers~=4.57",
    "torch",
    "torchvision",
    "sentence-transformers>=5.2.2",
]

[project.optional-dependencies]
openai = [
    "accelerate>=1.12.0",
    "triton>=3.5.0",
    "kernels>=0.11.1",
]
microsoft = [
    "peft>=0.18.1",
    "backoff>=2.2.1",
]
# all is a composite of all the singular models.
all = [
    "accelerate>=1.12.0",
    "triton>=3.5.0",
    "kernels>=0.11.1",
    "peft>=0.18.1",
    "backoff>=2.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true  # Only used for torch packages explicitly mapped below.

# Route just these packages to the PyTorch index.
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}  # Important that this folder is the name of the folder where all the files sit under.

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm*"]  # The import <name>. Defined by the name of the folder under src.
